Upgraded Java version to JDK12 and enabled JPMS with module-info.java. Excluded lots of old javax dependencies in pom-file and instead use new jakarta packages. Upgraded some dependencies with new JPMS compatible versions.
Added su-exec command for starting the application with the app user securely.